style.css
body {
  display: flex;
  width: 100vw;
  height: 100vh;
  background-color: #000;
  justify-content: center;
  align-items: center;
  margin: 0;
  padding: 0;
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
}

#game {
  display: flex;
  width: 100%;
  height: 100%;
  max-width: 1000px;
  max-height: 800px;
}

